<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeText"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/buttonSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSendMessage" />

        <Button
            android:id="@+id/buttonUserManage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonUserName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="49dp" />

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonHelp" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAbout" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonExit" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>